JSW Devsb/src/objects/Issue_Tracker__c.object
<CustomObject>
    <description>This will be used to raise / followup on the issues raised during the UAT and development</description>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issue_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <picklist>
            <picklistValues>
                <fullName>Developer Sandbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Description__c</fullName>
        <description>Issue Description</description>
        <label>Issue Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Opened_On__c</fullName>
        <description>Date issue which is logged in.</description>
        <label>Issue Opened On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Issue_Status__c</fullName>
        <label>Issue Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Developer</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Ledger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Targets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PJP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report &amp; Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship To Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nature_Of_Request__c</fullName>
        <label>Nature Of Request</label>
        <picklist>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <description>Remarks</description>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reported By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issue_Tracker1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Screenshot_If_Applicable__c</fullName>
        <label>Screenshot If Applicable</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Issue brief</description>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_Of_Device__c</fullName>
        <label>Type Of Device</label>
        <picklist>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop/Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Issue Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IT-{00000}</displayFormat>
        <label>Issue Tracker Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issue Tracker</pluralLabel>
    <recordTypes>
        <fullName>Detail_Page</fullName>
        <active>true</active>
        <description>Creating New Issue</description>
        <label>Detail Page</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Issue_Status_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( TEXT(Issue_Status__c ))</errorConditionFormula>
        <errorDisplayField>Issue_Status__c</errorDisplayField>
        <errorMessage>Please select a value</errorMessage>
    </validationRules>
</CustomObject>